Fixed font-weight of job title so it looks fine on mobile

--- a/app/main/src/main.css
+++ b/app/main/src/main.css
@@ -81,7 +81,7 @@ hr.slashed-hr {
     margin-bottom: 1.5rem;
     /*color: hsla(0, 0%, 0%, 0.8);*/
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     text-rendering: optimizeLegibility;
     font-size: 2.25rem;
     line-height: 2.25rem;
